Fixes #32391 - change alignment from inline to inline-block

--- a/app/assets/stylesheets/patternfly_and_overrides.scss
+++ b/app/assets/stylesheets/patternfly_and_overrides.scss
@@ -83,7 +83,7 @@ a {
 // help-inline is not defined in Bootstrap3
 .help-inline {
   margin: 0;
-  display: inline;
+  display: inline-block;
   color: #737373;
 }
 
